# agenticscript

./: CLAUDE.md  README.md  pyproject.toml
docs/ai/: NOTES.md  PLAN-INITIAL.md  PLAN-PHASE-2.md  PLAN.md
src/agenticscript/: __init__.py
src/agenticscript/core/: __init__.py  ast_nodes.py  grammar.lark  interpreter.py  module_system.py  parser.py
src/agenticscript/debugger/: __init__.py  repl.py
src/agenticscript/runtime/: __init__.py  message_bus.py  tool_registry.py
src/agenticscript/stdlib/: __init__.py  agents.py  tools.py
tests/: test_agent_communication.py  test_enhanced_agent.py  test_enhanced_debug.py  test_enhanced_routing_tool.py  test_imports_and_tools.py  test_interpreter.py  test_interpreter_communication.py  test_message_bus.py  test_message_flow_visualization.py  test_module_system.py  test_parser.py  test_phase2_integration.py  test_repl.py  test_tool_registry.py
