[project]
name = "agenticscript"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alejandro Saucedo", email = "alejandro.saucedo@zalando.de" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
agenticscript = "agenticscript:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
