[project]
name = "agenticscript"
version = "0.1.0"
description = "An agentic-first programming language with distributed runtime capabilities"
readme = "README.md"
authors = [
    { name = "Alejandro Saucedo", email = "alejandro.saucedo@zalando.de" }
]
requires-python = ">=3.12"
dependencies = [
    "lark[regex]>=1.1.7",    # Parser generator
    "rich>=13.0.0",          # Terminal formatting
    "dataclasses-json>=0.6", # JSON serialization
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",        # Testing
    "pytest-cov>=4.1.0",    # Coverage
    "ruff>=0.1.0",          # Linting and formatting
]

[project.scripts]
agenticscript = "agenticscript:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
